tests/parsing/smtlib/poly/errors/011_exists_bad_var_list_2.expected
File "tests/parsing/smtlib/poly/errors/011_exists_bad_var_list_2.psmt2", line 2, character 16-20:
2 | (assert (exists blah true))
                    ^^^^
Error while parsing a term, read the symbol 'blah',
      but expected a list of sorted variables, starting with an opening
      parenthesis.
